--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
                 </header>
                 <nav>
                     <a href="#article1">About</a> &nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="contactus.html">Contact</a>
+                    <a href="contact.html">Contact</a>
 
                 </nav>
                 <article>
@@ -49,7 +49,7 @@
                         <br>
                     </p>
                     <p>
-                        <a href="contactus.html"> Contact us </a> with your requirement for mobile app services.
+                        <a href="contact.html"> Contact us </a> with your requirement for mobile app services.
                     </p>
 
 
